<resources>
    <string name="abbrev_wday_month_day_no_year">EEEEMMMMd</string>
    <string name="abbrev_wday_month_day_no_year_alarm">EEEMMMd</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_battery_details">Open battery details</string>
    <string name="accessibility_battery_level">Battery %d percent.</string>
    <string name="accessibility_battery_level_charging">Battery charging, %d percent.</string>
    <string name="accessibility_desc_notification_icon">%1$s notification: %2$s</string>
    <string name="accessibility_display_daltonizer_preference_subtitle">This feature is experimental and may affect performance.</string>
    <string name="accessibility_display_daltonizer_preference_title">Color correction</string>
    <string name="accessibility_manual_zen_less_time">Less time.</string>
    <string name="accessibility_manual_zen_more_time">More time.</string>
    <string name="accessibility_no_wifi">Wifi disconnected.</string>
    <string name="accessibility_wifi_off">Wifi off.</string>
    <string name="accessibility_wifi_one_bar">Wifi one bar.</string>
    <string name="accessibility_wifi_security_type_none">Open network</string>
    <string name="accessibility_wifi_security_type_secured">Secure network</string>
    <string name="accessibility_wifi_signal_full">Wifi signal full.</string>
    <string name="accessibility_wifi_three_bars">Wifi three bars.</string>
    <string name="accessibility_wifi_two_bars">Wifi two bars.</string>
    <string name="active_input_method_subtypes">Active input methods</string>
    <string name="adb_keys_warning_message">Revoke access to USB debugging from all computers you’ve previously authorized?</string>
    <string name="adb_warning_message">USB debugging is intended for development purposes only. Use it to copy data between your computer and your device, install apps on your device without notification, and read log data.</string>
    <string name="adb_warning_title">Allow USB debugging?</string>
    <string name="alarm_template">at %1$s</string>
    <string name="alarm_template_far">on %1$s</string>
    <string name="allow_mock_location">Allow mock locations</string>
    <string name="allow_mock_location_summary">Allow mock locations</string>
    <string name="animator_duration_scale_title">Animator duration scale</string>
    <string name="aod_clock_analog">Analog</string>
    <string name="aod_clock_classic">Classic</string>
    <string name="aod_clock_default">Default</string>
    <string name="aod_clock_digital">Digital</string>
    <string name="aod_clock_preview_action_bar_title">Preview</string>
    <string name="aod_clock_select_action_bar_title">Clock style</string>
    <string name="aod_clock_select_style_text">Select the clock style</string>
    <string name="aod_clock_selected">SELECTED</string>
    <string name="aod_settings">Always on display</string>
    <string name="aod_title">Always on display</string>
    <string name="apn_settings_not_available">Access Point Name settings are not available for this user</string>
    <string name="app_name">Ambient Display</string>
    <string name="app_process_limit_title">Background process limit</string>
    <string name="appbar_scrolling_view_behavior">com.oneplus.lib.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="available_via_carrier">Available via %1$s</string>
    <string name="available_via_passpoint">Available via %1$s</string>
    <string name="back_button_label">Back</string>
    <string name="battery_info_status_charging">Charging</string>
    <string name="battery_info_status_charging_lower">charging</string>
    <string name="battery_info_status_discharging">Not charging</string>
    <string name="battery_info_status_full">Full</string>
    <string name="battery_info_status_not_charging">"Plugged in, can't charge right now"</string>
    <string name="battery_info_status_unknown">Unknown</string>
    <string name="battery_meter_very_low_overlay_symbol">!</string>
    <string name="bluetooth_a2dp_profile_summary_connected">Connected to media audio</string>
    <string name="bluetooth_a2dp_profile_summary_use_for">Use for media audio</string>
    <string name="bluetooth_active_battery_level">Active, %1$s battery</string>
    <string name="bluetooth_active_no_battery_level">Active</string>
    <string name="bluetooth_battery_level">%1$s battery</string>
    <string name="bluetooth_connected">Connected%1$s</string>
    <string name="bluetooth_connected_battery_level">Connected, battery %1$s%2$s</string>
    <string name="bluetooth_connected_no_a2dp">Connected (no media)%1$s</string>
    <string name="bluetooth_connected_no_a2dp_battery_level">Connected (no media), battery %1$s%2$s</string>
    <string name="bluetooth_connected_no_headset">Connected (no phone)%1$s</string>
    <string name="bluetooth_connected_no_headset_battery_level">Connected (no phone), battery %1$s%2$s</string>
    <string name="bluetooth_connected_no_headset_no_a2dp">Connected (no phone or media)%1$s</string>
    <string name="bluetooth_connected_no_headset_no_a2dp_battery_level">Connected (no phone or media), battery %1$s%2$s</string>
    <string name="bluetooth_connected_no_map">Connected (no message access)%1$s</string>
    <string name="bluetooth_connecting">Connecting…</string>
    <string name="bluetooth_disable_absolute_volume">Disable absolute volume</string>
    <string name="bluetooth_disable_absolute_volume_summary">Disables the Bluetooth absolute volume feature in case of volume issues with remote devices such as unacceptably loud volume or lack of control.</string>
    <string name="bluetooth_disconnected">Disconnected</string>
    <string name="bluetooth_disconnecting">Disconnecting…</string>
    <string name="bluetooth_dun_profile_summary_connected">Connected to Dun Server</string>
    <string name="bluetooth_dun_profile_summary_use_for">Use for Dial-up Network access</string>
    <string name="bluetooth_headset_profile_summary_connected">Connected to phone audio</string>
    <string name="bluetooth_headset_profile_summary_use_for">Use for phone audio</string>
    <string name="bluetooth_hearing_aid_profile_summary_connected">Connected to Hearing Aid</string>
    <string name="bluetooth_hearing_aid_profile_summary_use_for">Use for Hearing Aid</string>
    <string name="bluetooth_hearingaid_left_battery_level">Left - %1$s battery</string>
    <string name="bluetooth_hearingaid_left_pairing_message">Pairing left hearing aid…</string>
    <string name="bluetooth_hearingaid_right_battery_level">Right - %1$s battery</string>
    <string name="bluetooth_hearingaid_right_pairing_message">Pairing right hearing aid…</string>
    <string name="bluetooth_hid_profile_summary_connected">Connected to input device</string>
    <string name="bluetooth_hid_profile_summary_use_for">Use for input</string>
    <string name="bluetooth_map_profile_summary_connected">Connected to map</string>
    <string name="bluetooth_map_profile_summary_use_for">Use for map</string>
    <string name="bluetooth_opp_profile_summary_connected">Connected to file transfer server</string>
    <string name="bluetooth_opp_profile_summary_not_connected">Not connected to file transfer server</string>
    <string name="bluetooth_opp_profile_summary_use_for">Use for file transfer</string>
    <string name="bluetooth_pairing">Pairing…</string>
    <string name="bluetooth_pairing_accept">Pair</string>
    <string name="bluetooth_pairing_accept_all_caps">PAIR</string>
    <string name="bluetooth_pairing_decline">Cancel</string>
    <string name="bluetooth_pairing_device_down_error_message">"Can't communicate with %1$s."</string>
    <string name="bluetooth_pairing_error_message">"Couldn't pair with %1$s."</string>
    <string name="bluetooth_pairing_pin_error_message">"Couldn't pair with %1$s because of an incorrect PIN or passkey."</string>
    <string name="bluetooth_pairing_rejected_error_message">Pairing rejected by %1$s.</string>
    <string name="bluetooth_pairing_will_share_phonebook">Pairing grants access to your contacts and call history when connected.</string>
    <string name="bluetooth_pan_nap_profile_summary_connected">Sharing local internet connection with device</string>
    <string name="oneplus_aod_auto_wake_screen_summary">Wake screen when you receive notifications</string>
    <string name="oneplus_aod_auto_wake_screen_title">New Notifications</string>
    <string name="oneplus_aod_clock_style_title">Clock style</string>
    <string name="oneplus_aod_display_mode_title">When to show</string>
    <string name="oneplus_aod_display_period_title">Display period</string>
    <string name="oneplus_aod_display_text_title">Display message</string>
    <string name="oneplus_aod_mode_lift_up">Lift up display</string>
    <string name="oneplus_aod_mode_shake_up">Pick up your phone to show</string>
    <string name="oneplus_aod_mode_single_tap">Tap the screen to show</string>
    <string name="oneplus_aod_settings">Ambient display</string>
    <string name="oneplus_aod_settings_what_to_show">what to show</string>
    <string name="oneplus_aod_settings_when_to_show">when to show</string>
    <string name="owner_info_settings_summary">None</string>
</resources>